test/fail_compilation/lexer5.d
/*
TEST_OUTPUT:
---
fail_compilation/lexer5.d(8): Error: number '1e-100f' is not representable
---
*/

static float f = 1e-100f;

